@@ -1,3 +1,9 @@
+2004-01-26  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>
+
+	* cp-tree.h (language_function, lang_type_header): Use
+	BOOL_BITFIELD.
+	* name-lookup.h (cp_binding_level): Likewise.
+
 2004-01-26  Mark Mitchell  <mark@codesourcery.com>
 
 	PR c++/13663
